# Medical-Image-Processor

./: .gitignore  CMakeLists.txt  README.md
include/: Filter.h  Image.h  ImageIO.h  Pipeline.h  Utils.h
src/: Filter.cpp  ImageIO.cpp  Pipeline.cpp  main.cpp
tests/: test_filters.cpp
